<resources>
    <string name="app_name">appnimal</string>
    <string name="cuser_nombre">Nombre de usuario</string>
    <string name="cuser_imagen">Avatar (url)</string>
    <string name="nombre">Nombre</string>
    <string name="bienvenido">Bienvenido a appnimal</string>
    <string name="sindatos">Sin datos o sin conexión</string>
    <string name="enfermo">¿Está enfermo?</string>
    <string name="dueno">Dueño</string>
    <string name="descripcion">Descripción</string>
    <string name="peso">Peso (kg)</string>
    <string name="imagen">Imagen</string>
    <string name="detalle">Nombre de animal</string>
    <string name="genero">Genero</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="creditos">Créditos</string>
    <string name="aceptar">Aceptar</string>
    <string name="creditos_inicio">Elaborado por:\nIdelfonso De la Cruz Hernández\n\nVersion 2.0.</string>
    <string name="creditos_datos">Elaborado por:\nIdelfonso De la Cruz Hernández\n\nDesarrollo de Aplicaciones para Dispositivos Móviles\n9ª emisión\n\nMódulo: Desarrollo avanzado de aplicaciones para Android\n\nEnero de 2023 - Version 2.0.</string>
    <string name="error_dataUser">Se obtuvo usuario defaul: %s</string>
    <string name="error_dataAnimal">No se pudo obtener detalle de animal: %s</string>
    <string name="regresar">regresar</string>
    <string name="ultima_vez_visto_en">Última vez visto en:</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="user_email">Correo electrónico</string>
    <string name="user_psw">Contraseña</string>
    <string name="restablecer">¿Olvidó su contraseña? - Restablecer aquí</string>
    <string name="pie_login">©appnimal 2023 v2.0 - Por: Idelfonso De la Cruz Hernández</string>
    <string name="error_correo">Se requiere el correo</string>
    <string name="error_correov">Se requiere un correo válido</string>
    <string name="error_pass">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="cancelar">Cancelar</string>
    <string name="pop_restablecer">Restablecer contraseña</string>
    <string name="pop_restablecer_2">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="pop_restablecer_exito">Se envio a su correo la liga para restablecer contraseña</string>
    <string name="verificacion_ok">El correo de verificación ha sido enviado</string>
    <string name="verificacion_danger">No se pudo enviar el correo de verificación</string>
    <string name="user_create">Usuario creado</string>
    <string name="ERROR_">Error: %s</string>
    <string name="ERROR_INVALID_EMAIL">El correo electrónico no tiene un formato correcto</string>
    <string name="ERROR_WRONG_PASSWORD">La contraseña no es válida</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">El correo electrónico ya está en uso con otra cuenta</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">La sesión ha expirado. Favor de ingresar nuevamente</string>
    <string name="ERROR_USER_NOT_FOUND">No existe el usuario con la información proporcionada</string>
    <string name="ERROR_WEAK_PASSWORD">La contraseña porporcionada es inválida</string>
    <string name="NO_NETWORK">Red no disponible o se interrumpió la conexión</string>
    <string name="ERROR_AUTH_OTRO">No se pudo autenticar exitosamente</string>
    <string name="EXITO">:) Bienvenido</string>
    <string name="ERROR_ENLACE_RESET">El enlace no se ha podido enviar: %s</string>
    <string name="ERROR_DATOS_USER_API">Error en datos API user: %s</string>
    <string name="ERROR_SERVER_API">Error servidor API user: %s</string>
    <string name="cerrar_session">Cerrar sesión</string>
    <string name="se_cerrar_session">Se cerrar sesion</string>
    <string name="send_ver">El correo de verificación ha sido enviado</string>
    <string name="send_ver_error">El correo de verificación no se ha podido enviar</string>
    <string name="Aviso">Aviso</string>
    <string name="no_verificado">No has verificado tu correo, recomendamos varificarlo</string>
    <string name="verificar_now">Verificar ahora</string>
</resources>