<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/degradado_oc_on"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".view.fragment.DetallAnimalFragment">
        <TextView
            android:id="@+id/NombreAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/bb"
            android:textFontWeight="700"
            android:textStyle="bold"
            android:textSize="40sp"
            tools:text="@string/detalle" />
        <ImageView
            android:id="@+id/imagenAnimal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/NombreAnimal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/icono" />
        <TextView
            android:id="@+id/duenoAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagenAnimal"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/bb"
            android:textSize="20sp"
            tools:text="@string/dueno" />
        <TextView
            android:id="@+id/pesoAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/duenoAnimal"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/bb"
            android:textSize="20sp"
            tools:text="PESO: 120kg" />
        <RadioGroup
            android:id="@+id/generoAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pesoAnimal"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/MAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/macho"
                android:textColor="@color/bb"
                android:textSize="20sp"
                android:buttonTint="@color/os"
                />
            <RadioButton
                android:id="@+id/HAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/hembra"
                android:textColor="@color/bb"
                android:textSize="20sp"
                android:buttonTint="@color/os"
                />
        </RadioGroup>
        <CheckBox
            android:id="@+id/enfermoAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/generoAnimal"
            android:layout_centerHorizontal="true"
            android:text="@string/enfermo"
            android:textColor="@color/bb"
            android:textSize="20sp"
            android:buttonTint="@color/os"
            />
        <TextView
            android:id="@+id/descripcionAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enfermoAnimal"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/bb"
            android:textSize="20sp"
            tools:text="@string/descripcion"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
        <TextView
            android:id="@+id/tituloUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descripcionAnimal"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/bb"
            android:textSize="20sp"
            android:text="@string/ultima_vez_visto_en"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tituloUbicacion"
            android:id="@+id/containermap"
            android:padding="25dp"
            >
            <fragment
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/containermap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:iconTint="@color/bb"
            app:backgroundTint="@color/oi"
            android:textColor="@color/bb"
            android:text="@string/regresar"
            app:icon="@drawable/ic_back"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/loaddatos"
            android:padding="15dp"
            android:layout_gravity="center"
            android:src="@drawable/load"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            />

    </RelativeLayout>
</ScrollView>