<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.Login"
    android:gravity="center"
    android:padding="35dp"
    android:background="@drawable/degradado_oo_on">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/logocontainer"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/appname"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:textColor="@color/bb"
            />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ico"
            android:id="@+id/icono"
            android:layout_centerHorizontal="true"
            />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:layout_below="@id/logocontainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/bb"
        app:boxStrokeColor="@color/bb"
        android:textColorHint="@color/bb"
        app:hintTextColor="@color/bb"
        android:textColor="@color/bb"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputemail"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/bb"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_psw"
        android:layout_below="@id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/bb"
        app:boxStrokeColor="@color/bb"
        android:textColorHint="@color/bb"
        app:hintTextColor="@color/bb"
        android:paddingTop="10dp"
        android:textColor="@color/bb"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputpass"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/bb"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:id="@+id/botones"
        >
        <Button
            android:id="@+id/iniciarsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:iconTint="@color/bb"
            app:backgroundTint="@color/oc"
            android:textColor="@color/bb"
            android:text="@string/ingresar"
            app:icon="@drawable/ic_login"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />
        <Button
            android:id="@+id/registrarusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            app:iconTint="@color/bb"
            app:backgroundTint="@color/nn"
            android:textColor="@color/bb"
            android:text="@string/registrar"
            app:icon="@drawable/ic_register"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/restablecer"
        android:layout_below="@+id/botones"
        android:id="@+id/restablecer"
        android:textColor="@color/oi"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        />
    <View
        android:layout_height="1dp"
        android:id="@+id/divisor"
        android:layout_below="@id/restablecer"
        android:layout_width="match_parent"
        android:background="@color/oo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pie_login"
        android:textColor="@color/bb"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textFontWeight="100"
        android:id="@+id/pie"
        android:layout_below="@id/divisor"
        android:layout_marginTop="25dp"
        />
</RelativeLayout>