<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/degradado_oo_on"
    tools:context=".view.fragment.PerfilConfigFragment"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="35dp"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ico"
            android:id="@+id/icono"
            android:layout_centerHorizontal="true"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuser_nombre"
            android:layout_below="@id/icono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/bb"
            app:boxStrokeColor="@color/bb"
            android:textColorHint="@color/bb"
            app:hintTextColor="@color/bb"
            android:textColor="@color/bb"
            android:paddingTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputnombre"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/bb"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuser_imagen"
            android:layout_below="@id/nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_camera"
            app:startIconTint="@color/bb"
            app:boxStrokeColor="@color/bb"
            android:textColorHint="@color/bb"
            app:hintTextColor="@color/bb"
            android:paddingTop="10dp"
            android:textColor="@color/bb"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputavatar"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/bb"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usermail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:layout_below="@id/avatar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/bb"
            app:boxStrokeColor="@color/bb"
            android:textColorHint="@color/bb"
            app:hintTextColor="@color/bb"
            android:paddingTop="10dp"
            android:textColor="@color/bb"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputusermail"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/bb"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usermail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconTint="@color/bb"
            app:backgroundTint="@color/oc"
            android:textColor="@color/bb"
            android:text="@string/regresar"
            app:icon="@drawable/ic_back"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

            <Button
                android:id="@+id/cerrarsession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconTint="@color/bb"
                app:backgroundTint="@color/oo"
                android:textColor="@color/bb"
                android:text="@string/cerrar_session"
                app:icon="@drawable/ico_stop"
                android:layout_marginLeft="15dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                />
        </LinearLayout>
</RelativeLayout>
</ScrollView>